stop horizontal scroll

--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -10,7 +10,10 @@ main {
   color: black;
 }
 
+html,
 body {
-  max-width: 100%;
   overflow-x: hidden;
+}
+body {
+  position: relative;
 }
